samples/_failures_safe/1761365557_36665c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87ab50f1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_87ab50f1.c:163:5: error: expected expression at end of input
  163 |     if (*token_count <
      |     ^~
./samples/SAFE/__tmp_87ab50f1.c:163:5: error: expected declaration or statement at end of input
